// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`webpack default 1`] = `
"{
  \\"options\\": {
    \\"ts\\": false,
    \\"tslint\\": false,
    \\"es\\": false,
    \\"eslint\\": false,
    \\"editorconfig\\": false,
    \\"prettier\\": false,
    \\"stylelint\\": false,
    \\"gitignore\\": false,
    \\"npmrc\\": false,
    \\"readme\\": false,
    \\"githooks\\": false,
    \\"commitlint\\": false,
    \\"nodeVersion\\": false,
    \\"webpack\\": true,
    \\"install\\": false,
    \\"force\\": true,
    \\"dryRun\\": false,
    \\"mode\\": \\"api\\"
  },
  \\"mergedFiles\\": {
    \\"package.json\\": {
      \\"override\\": false,
      \\"data\\": {
        \\"browserslist\\": [
          \\"> 1%\\",
          \\"last 2 versions\\",
          \\"not ie <= 10\\"
        ],
        \\"scripts\\": {
          \\"build\\": \\"webpack --mode production\\",
          \\"postinstall\\": \\"npm rebuild node-sass\\",
          \\"start\\": \\"webpack-dev-server --mode development\\"
        },
        \\"devDependencies\\": {
          \\"@babel/core\\": \\"7.2.2\\",
          \\"@babel/polyfill\\": \\"7.2.5\\",
          \\"@babel/preset-env\\": \\"7.2.3\\",
          \\"@babel/preset-react\\": \\"7.0.0\\",
          \\"asset-config-webpack-plugin\\": \\"0.1.0-mock\\",
          \\"clean-webpack-plugin\\": \\"0.1.0-mock\\",
          \\"html-webpack-plugin\\": \\"0.1.0-mock\\",
          \\"scss-config-webpack-plugin\\": \\"0.1.0-mock\\",
          \\"webpack\\": \\"0.1.0-mock\\",
          \\"webpack-cli\\": \\"0.1.0-mock\\",
          \\"webpack-dev-server\\": \\"0.1.0-mock\\"
        }
      }
    },
    \\"src/index.js\\": {
      \\"override\\": false,
      \\"data\\": \\"import '@babel/polyfill';\\\\n\\\\n// eslint-disable-next-line\\\\nconsole.log('@namics/frontend-defaults installed');\\\\n\\"
    },
    \\"webpack.config.js\\": {
      \\"override\\": false,
      \\"data\\": \\"const AssetConfigWebpackPlugin = require('asset-config-webpack-plugin');\\\\nconst CleanWebpackPlugin = require('clean-webpack-plugin');\\\\nconst HtmlWebpackPlugin = require('html-webpack-plugin');\\\\nconst ScssConfigWebpackPlugin = require('scss-config-webpack-plugin');\\\\n\\\\nmodule.exports = {\\\\n  plugins: [\\\\n    // File loader configuration for .woff and .woff2 files\\\\n    // File loader configuration for .gif .jpg .jpeg .png and .svg files\\\\n    // https://github.com/namics/webpack-config-plugins/tree/master/packages/asset-config-webpack-plugin\\\\n    new AssetConfigWebpackPlugin(),\\\\n    // Cleans the dist folder before the build starts\\\\n    new CleanWebpackPlugin(['dist']),\\\\n    // Generate a base html file and injects all generated css and js files\\\\n    new HtmlWebpackPlugin(),\\\\n    // SCSS Configuration for .css .module.css and .scss .module.scss files\\\\n    // see https://github.com/namics/webpack-config-plugins/tree/master/packages/scss-config-webpack-plugin/config\\\\n    new ScssConfigWebpackPlugin(),\\\\n  ],\\\\n};\\\\n\\"
    },
    \\"babel.config.js\\": {
      \\"override\\": false,
      \\"data\\": \\"module.exports = {\\\\n\\\\tpresets: [\\\\n\\\\t\\\\t[\\\\n\\\\t\\\\t\\\\trequire.resolve('@babel/preset-env'),\\\\n\\\\t\\\\t\\\\t{\\\\n\\\\t\\\\t\\\\t\\\\tuseBuiltIns: 'entry'\\\\n\\\\t\\\\t\\\\t},\\\\n\\\\t\\\\t],\\\\n\\\\t\\\\t[\\\\n\\\\t\\\\t\\\\trequire.resolve('@babel/preset-react'),\\\\n\\\\t\\\\t]\\\\n\\\\t],\\\\n};\\\\n\\"
    }
  }
}"
`;

exports[`webpack default 2`] = `
"module.exports = {
	presets: [
		[
			require.resolve('@babel/preset-env'),
			{
				useBuiltIns: 'entry'
			},
		],
		[
			require.resolve('@babel/preset-react'),
		]
	],
};
"
`;

exports[`webpack default 3`] = `
"{
  \\"browserslist\\": [
    \\"> 1%\\",
    \\"last 2 versions\\",
    \\"not ie <= 10\\"
  ],
  \\"scripts\\": {
    \\"build\\": \\"webpack --mode production\\",
    \\"postinstall\\": \\"npm rebuild node-sass\\",
    \\"start\\": \\"webpack-dev-server --mode development\\"
  },
  \\"devDependencies\\": {
    \\"@babel/core\\": \\"7.2.2\\",
    \\"@babel/polyfill\\": \\"7.2.5\\",
    \\"@babel/preset-env\\": \\"7.2.3\\",
    \\"@babel/preset-react\\": \\"7.0.0\\",
    \\"asset-config-webpack-plugin\\": \\"0.1.0-mock\\",
    \\"clean-webpack-plugin\\": \\"0.1.0-mock\\",
    \\"html-webpack-plugin\\": \\"0.1.0-mock\\",
    \\"scss-config-webpack-plugin\\": \\"0.1.0-mock\\",
    \\"webpack\\": \\"0.1.0-mock\\",
    \\"webpack-cli\\": \\"0.1.0-mock\\",
    \\"webpack-dev-server\\": \\"0.1.0-mock\\"
  }
}"
`;

exports[`webpack default 4`] = `
"const AssetConfigWebpackPlugin = require('asset-config-webpack-plugin');
const CleanWebpackPlugin = require('clean-webpack-plugin');
const HtmlWebpackPlugin = require('html-webpack-plugin');
const ScssConfigWebpackPlugin = require('scss-config-webpack-plugin');

module.exports = {
  plugins: [
    // File loader configuration for .woff and .woff2 files
    // File loader configuration for .gif .jpg .jpeg .png and .svg files
    // https://github.com/namics/webpack-config-plugins/tree/master/packages/asset-config-webpack-plugin
    new AssetConfigWebpackPlugin(),
    // Cleans the dist folder before the build starts
    new CleanWebpackPlugin(['dist']),
    // Generate a base html file and injects all generated css and js files
    new HtmlWebpackPlugin(),
    // SCSS Configuration for .css .module.css and .scss .module.scss files
    // see https://github.com/namics/webpack-config-plugins/tree/master/packages/scss-config-webpack-plugin/config
    new ScssConfigWebpackPlugin(),
  ],
};
"
`;

exports[`webpack webpack-with-ts 1`] = `
"{
  \\"options\\": {
    \\"ts\\": true,
    \\"tslint\\": false,
    \\"es\\": false,
    \\"eslint\\": false,
    \\"editorconfig\\": false,
    \\"prettier\\": false,
    \\"stylelint\\": false,
    \\"gitignore\\": false,
    \\"npmrc\\": false,
    \\"readme\\": false,
    \\"githooks\\": false,
    \\"commitlint\\": false,
    \\"nodeVersion\\": false,
    \\"webpack\\": true,
    \\"install\\": false,
    \\"force\\": true,
    \\"dryRun\\": false,
    \\"mode\\": \\"api\\"
  },
  \\"mergedFiles\\": {
    \\"package.json\\": {
      \\"override\\": false,
      \\"data\\": {
        \\"devDependencies\\": {
          \\"@namics/ts-config\\": \\"0.1.0\\",
          \\"asset-config-webpack-plugin\\": \\"0.1.0-mock\\",
          \\"clean-webpack-plugin\\": \\"0.1.0-mock\\",
          \\"html-webpack-plugin\\": \\"0.1.0-mock\\",
          \\"scss-config-webpack-plugin\\": \\"0.1.0-mock\\",
          \\"ts-config-webpack-plugin\\": \\"0.1.0-mock\\",
          \\"typescript\\": \\"0.1.0-mock\\",
          \\"webpack\\": \\"0.1.0-mock\\",
          \\"webpack-cli\\": \\"0.1.0-mock\\",
          \\"webpack-dev-server\\": \\"0.1.0-mock\\"
        },
        \\"browserslist\\": [
          \\"> 1%\\",
          \\"last 2 versions\\",
          \\"not ie <= 10\\"
        ],
        \\"scripts\\": {
          \\"build\\": \\"webpack --mode production\\",
          \\"postinstall\\": \\"npm rebuild node-sass\\",
          \\"start\\": \\"webpack-dev-server --mode development\\"
        }
      }
    },
    \\"tsconfig.json\\": {
      \\"override\\": false,
      \\"data\\": \\"{\\\\n\\\\t\\\\\\"extends\\\\\\": \\\\\\"./node_modules/@namics/ts-config/tsconfig.json\\\\\\",\\\\n\\\\t\\\\\\"exclude\\\\\\": [\\\\\\"dist\\\\\\", \\\\\\"build\\\\\\", \\\\\\"node_modules\\\\\\", \\\\\\"__tests__\\\\\\"]\\\\n}\\\\n\\"
    },
    \\"src/index.ts\\": {
      \\"override\\": false,
      \\"data\\": \\"import '@babel/polyfill';\\\\n\\\\n// tslint:disable-next-line\\\\nconsole.log('@namics/frontend-defaults installed');\\\\n\\"
    },
    \\"webpack.config.js\\": {
      \\"override\\": false,
      \\"data\\": \\"const AssetConfigWebpackPlugin = require('asset-config-webpack-plugin');\\\\nconst CleanWebpackPlugin = require('clean-webpack-plugin');\\\\nconst HtmlWebpackPlugin = require('html-webpack-plugin');\\\\nconst ScssConfigWebpackPlugin = require('scss-config-webpack-plugin');\\\\nconst TsConfigWebpackPlugin = require('ts-config-webpack-plugin');\\\\n\\\\nmodule.exports = {\\\\n  plugins: [\\\\n    // File loader configuration for .woff and .woff2 files\\\\n    // File loader configuration for .gif .jpg .jpeg .png and .svg files\\\\n    // https://github.com/namics/webpack-config-plugins/tree/master/packages/asset-config-webpack-plugin\\\\n    new AssetConfigWebpackPlugin(),\\\\n    // Cleans the dist folder before the build starts\\\\n    new CleanWebpackPlugin(['dist']),\\\\n    // Generate a base html file and injects all generated css and js files\\\\n    new HtmlWebpackPlugin(),\\\\n    // SCSS Configuration for .css .module.css and .scss .module.scss files\\\\n    // see https://github.com/namics/webpack-config-plugins/tree/master/packages/scss-config-webpack-plugin/config\\\\n    new ScssConfigWebpackPlugin(),\\\\n    // Multi threading typescript loader configuration with caching for .ts and .tsx files\\\\n    // see https://github.com/namics/webpack-config-plugins/tree/master/packages/ts-config-webpack-plugin/config\\\\n    new TsConfigWebpackPlugin(),\\\\n  ],\\\\n};\\\\n\\"
    }
  }
}"
`;

exports[`webpack webpack-with-ts 2`] = `
"{
  \\"devDependencies\\": {
    \\"@namics/ts-config\\": \\"0.1.0\\",
    \\"asset-config-webpack-plugin\\": \\"0.1.0-mock\\",
    \\"clean-webpack-plugin\\": \\"0.1.0-mock\\",
    \\"html-webpack-plugin\\": \\"0.1.0-mock\\",
    \\"scss-config-webpack-plugin\\": \\"0.1.0-mock\\",
    \\"ts-config-webpack-plugin\\": \\"0.1.0-mock\\",
    \\"typescript\\": \\"0.1.0-mock\\",
    \\"webpack\\": \\"0.1.0-mock\\",
    \\"webpack-cli\\": \\"0.1.0-mock\\",
    \\"webpack-dev-server\\": \\"0.1.0-mock\\"
  },
  \\"browserslist\\": [
    \\"> 1%\\",
    \\"last 2 versions\\",
    \\"not ie <= 10\\"
  ],
  \\"scripts\\": {
    \\"build\\": \\"webpack --mode production\\",
    \\"postinstall\\": \\"npm rebuild node-sass\\",
    \\"start\\": \\"webpack-dev-server --mode development\\"
  }
}"
`;

exports[`webpack webpack-with-ts 3`] = `
"{
	\\"extends\\": \\"./node_modules/@namics/ts-config/tsconfig.json\\",
	\\"exclude\\": [\\"dist\\", \\"build\\", \\"node_modules\\", \\"__tests__\\"]
}
"
`;

exports[`webpack webpack-with-ts 4`] = `
"const AssetConfigWebpackPlugin = require('asset-config-webpack-plugin');
const CleanWebpackPlugin = require('clean-webpack-plugin');
const HtmlWebpackPlugin = require('html-webpack-plugin');
const ScssConfigWebpackPlugin = require('scss-config-webpack-plugin');
const TsConfigWebpackPlugin = require('ts-config-webpack-plugin');

module.exports = {
  plugins: [
    // File loader configuration for .woff and .woff2 files
    // File loader configuration for .gif .jpg .jpeg .png and .svg files
    // https://github.com/namics/webpack-config-plugins/tree/master/packages/asset-config-webpack-plugin
    new AssetConfigWebpackPlugin(),
    // Cleans the dist folder before the build starts
    new CleanWebpackPlugin(['dist']),
    // Generate a base html file and injects all generated css and js files
    new HtmlWebpackPlugin(),
    // SCSS Configuration for .css .module.css and .scss .module.scss files
    // see https://github.com/namics/webpack-config-plugins/tree/master/packages/scss-config-webpack-plugin/config
    new ScssConfigWebpackPlugin(),
    // Multi threading typescript loader configuration with caching for .ts and .tsx files
    // see https://github.com/namics/webpack-config-plugins/tree/master/packages/ts-config-webpack-plugin/config
    new TsConfigWebpackPlugin(),
  ],
};
"
`;
